Add JWT Authentication, move logic from models.py feat: Add JWT Bearer Authentication   - /auth/login             to get bearer token   - /auth/login/who-am-i    to return user id
Fix bug where user can send sign up request for existing users

* Update sign up so user can send multiple requests
* Update error messages to reduce chances for user enumeration
* Update sign up email message and config.py so it links to frontend url
* Create a exceptions.py file for some app specific exceptions
